[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["jayseaeff"]
readme = "README.md"
packages = [
    {include = "template", from="."}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
pydantic = "^2.7.0"
ollama = "^0.2.1"
chromadb = "^0.5.0"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
