[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["jayseaeff"]
readme = "README.md"
packages = [
    {include = "template", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.7.0"
PyYAML = "^6.0.1"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
